added events and added region info

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
       <div class="list">
 
       </div>
-      <svg version="1.1"
+      <div class="svg-container">
+         <svg version="1.1"
          xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:a="http://ns.adobe.com/AdobeSVGViewerExtensions/3.0/"
          x="0px" y="0px" width="560.512px" height="663.114px" viewBox="0 0 560.512 663.114" enable-background="new 0 0 560.512 663.114"
          xml:space="preserve">
@@ -694,15 +695,10 @@
             c0.422-0.896,0.952-1.441,1.665-2.086c1.453-1.316,2.602-2.968,3.872-4.485C112.257,393.585,112.598,393.143,113.051,392.579z"/>
       </g>
       </svg>
+      </div>
+      
       <div class="info">
-         <div class="region-header">
-            <h1>Sicilia</h1>
-            <div class="image-container"><img src="https://cdn.pixabay.com/photo/2020/09/15/18/54/monument-5574447_960_720.jpg" alt="sicily-foto"></div>
-         </div>
-         <p>Sicily is the largest island in the Mediterranean Sea and one of the 20 regions of Italy. It is one of the five Italian autonomous regions and is officially referred to as Regione Siciliana. The region has 5 million inhabitants. Its capital city is Palermo.
-            Sicily is in the central Mediterranean Sea, south of the Italian Peninsula, from which it is separated by the narrow Strait of Messina. Its most prominent landmark is Mount Etna, one of the tallest active volcanoes in Europe, and one of the most active in the world, currently 3,329 m (10,922 ft) high. The island has a typical Mediterranean climate.
-            Sicily has a roughly triangular shape, earning it the name Trinacria. To the north-east, it is separated from Calabria and the rest of the Italian mainland by the Strait of Messina, about 3 km (1.9 mi) wide in the north, and about 16 km (9.9 mi) wide in the southern part. The northern and southern coasts are each about 280 km (170 mi) long measured as a straight line, while the eastern coast measures around 180 km (110 mi); total coast length is estimated at 1,484 km (922 mi). The total area of the island is 25,711 km2 (9,927 sq mi), while the Autonomous Region of Sicily (which includes smaller surrounding islands) has an area of 27,708 km2 (10,698 sq mi).</p>
-            <iframe class="song" src="https://open.spotify.com/embed/track/6fPsTZl0c7IBTMcIGQAhvC" width="100%" height="80" frameBorder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+         
       </div>
     </main>
     <script src="/regions-info.js"></script>
