added info on region list click

--- a/index.html
+++ b/index.html
@@ -698,7 +698,7 @@
       </div>
       
       <div class="info">
-         
+         <h2>Select a Region to Explore</h2>
       </div>
     </main>
     <script src="/regions-info.js"></script>
