added region title and changed some styles

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
    <h1 class="main-title">Interactive Map of Italy</h1>
+   <h3 id="region-title" class="hidden"></h3>
    <main class="main-container">
       <div class="arrow-right"><p><i class="fas fa-chevron-right"></i></p></div>
       <div class="arrow-left"><p><i class="fas fa-chevron-left"></i></p></div>
